# SilentInfarctionSegmentationFLAIR

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  params.yaml  params_alpha_beta.yaml  prove.ipynb  pyproject.toml  setup.py
.github/workflows/: python.yml
SilentInfarctionSegmentationFLAIR/: __init__.py  __main__.py  __version__.py  evaluate_test_set.py  flair_t1_sum.py  histograms.py  parameters_tuning.py  parameters_tuning_dice.py  parameters_tuning_roc_auc.py  refinement.py  refinement_step.py  segmentation.py  threshold.py  tuning_alpha_beta.py  tuning_gamma_rs.py  utils.py
SilentInfarctionSegmentationFLAIR/settings/: config.py  config.yaml  params.py  params_alpha_beta.py  params_alpha_beta.yaml
docs/: genindex.html  modules.html  my_modules.html  my_scripts.html  objects.inv  py-modindex.html
docs/_modules/SilentInfarctionSegmentationFLAIR/: flair_t1_sum.html  refinement.html  refinement_step.html  tuning_alpha_beta.html
docs/_sources/: index.rst.txt  my_scripts.rst.txt
docs/html/: .buildinfo  index.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/SilentInfarctionSegmentationFLAIR/: evaluate_test_set.html  histograms.html  segmentation.html  threshold.html  tuning_gamma_rs.html  utils.html
docs/source/: SilentInfarctionSegmentationFLAIR.rst  conf.py  index.rst  modules.rst  my_modules.rst
testing/: MANIFEST.in  __init__.py  test_histograms.py  test_refinement.py  test_segmentation.py  test_utils.py
