[project]
name = 'SilentInfarctionSegmentationFLAIR'
version = '1.0.0'
authors = [
  { name='Davide Bracali', email='davide.bracali@studio.unibo.it' },
]
description = '3D segmentation of silent infarctions in FLAIR MRI images.'
readme = 'README.md'
requires-python = '>=3.9'
license = {text = "MIT"}
keywords = [
  'python',
  'FLAIR',
  'MRI',
  'segmentation',
  'threshold',
  'image-processing'
]
maintainers = [
  { name='Davide Bracali', email='davide.bracali@studio.unibo.it' },
]
classifiers = [
  'Natural Language :: English',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy'
]
dependencies = [
  'numpy',
  'SimpleITK',
  'matplotlib',
  'seaborn',
  'pandas',
  'scipy',
  'bayesian-optimization',
  'pyyaml'
]

[project.urls]
'Homepage' = 'https://github.com/DavideBracali/SilentInfarctionSegmentationFLAIR'
'Bug Tracker' = 'https://github.com/DavideBracali/SilentInfarctionSegmentationFLAIR/issues'

[project.scripts]
SilentInfarctionSegmentationFLAIR = "SilentInfarctionSegmentationFLAIR.__main__:cli"

[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'